Pagina de Informacion del doctor
Muestra que debe subir al correo

--- a/src/app/pages/info-doctor/info-doctor.page.html
+++ b/src/app/pages/info-doctor/info-doctor.page.html
@@ -21,15 +21,22 @@
     <li>Tener horarios disponibles para agenda de citas</li>
   </ul>
   <h2>Para enviar tu solicitud, incluye los siguientes datos en tu correo electrónico:</h2>
-  <ul>
+  <ul class="l1">
     <li>Nombre completo.</li>
     <li>Especialidades que manejas.</li>
-    <li>Dirección de contacto.</li>
+    <li>Dirección - Incluye:</li>
+    <ul class="l2">
+      <li>Calle o Avenida</li>
+      <li>Numero exterior</li>
+      <li>Numero interior - si aplica</li>
+      <li>Codigo Postal</li>
+      
+    </ul>
     <li>Foto (opcional).</li>
     <li>Documento que avale tu titulación (imagen o PDF).</li>
   </ul>
-  <p>
-    Envía tu solicitud a través de <a href="mailto:equipo&#64;tudominio.com">equipo&#64;tudominio.com</a>.
+  <p class="alent">
+    Envía tu solicitud a través de<a id="direccion" href="mailto:equipo&#64;tudominio.com">equipo&#64;tudominio.com</a>.
     ¡Esperamos saber de ti pronto!
   </p>
 
