--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -20,7 +20,7 @@
             <!-- <ion-icon slot="end" name="medical-outline"></ion-icon> -->
         </ion-button>
 
-        <p class="P1">¿No tienes cuenta?<a routerLink="/doc-info" id="registro"> Unete a nuestro equipo.</a></p>
+        <p class="P1">¿No tienes cuenta?<a routerLink="/info-doctor" id="registro"> Unete a nuestro equipo.</a></p>
 
     </section>
 
