--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -15,7 +15,7 @@
 
         <p class="P1">¿No tienes cuenta?<a routerLink="#" id="registro"> Regístrate</a></p>
 
-        <ion-button class="ion-margin-top" expand="block"  routerLink="#" mode="ios" fill="solid">
+        <ion-button class="ion-margin-top" expand="block"  routerLink="/auth/sign-up-doctors" mode="ios" fill="solid">
             Iniciar Sesion Como Medico
             <!-- <ion-icon slot="end" name="medical-outline"></ion-icon> -->
         </ion-button>
