--- a/src/app/pages/auth/sign-up-doctors/sign-up-doctors.page.html
+++ b/src/app/pages/auth/sign-up-doctors/sign-up-doctors.page.html
@@ -1,4 +1,4 @@
-<app-header title="Salud Conecta" subtitle="L O G I N"></app-header>
+<app-header backbutton="/welcome" title="Salud Conecta" subtitle="L O G I N"></app-header>
 <ion-content>
     <div class="d-flex-center">
         
@@ -37,17 +37,9 @@
                 <ion-icon slot="end" name="log-in-outline"></ion-icon>
             </ion-button>
 
-            <ion-button class="ion-margin-top" expand="block"  routerLink="/sign-up" mode="ios" fill="outline">
-                Registrate
-                <ion-icon slot="end" name="person-add-outline"></ion-icon>
-            </ion-button>
-
         </form>
     
     </div>
-
-
-    <ion-button routerLink="/welcome">Regresar</ion-button>
 
 
 
