--- a/src/app/pages/main-doctor/main-doctor.page.html
+++ b/src/app/pages/main-doctor/main-doctor.page.html
@@ -12,7 +12,7 @@
   </ion-header>
 
 
-  <h1>HOLA DOCTOR</h1>
+  <h1>HOLA DOCTOR {{doctorName}}</h1>
 
   <ion-button (click)="signOut()">
     Cerrar Sesión 
