--- a/src/app/pages/main/search/search.page.html
+++ b/src/app/pages/main/search/search.page.html
@@ -1,10 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>search</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [showMenu]="true" title="Salud Conecta" subtitle="B U S C A R"></app-header>
 
-<ion-content [fullscreen]="true">
+<ion-content class="ion-padding-top ion-text-center" >
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">search</ion-title>
