--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,6 +2,8 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button *ngIf="backbutton" [defaultHref]="backbutton" ></ion-back-button>
+
+      <ion-menu-button *ngIf="showMenu" menu="menu-content"></ion-menu-button>
     </ion-buttons>
 
     <ion-title>
