--- a/src/app/pages/main/appointments/appointments.page.html
+++ b/src/app/pages/main/appointments/appointments.page.html
@@ -1,10 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>appointments</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [showMenu]="true" title="Salud Conecta" subtitle="C I T A S"></app-header>
 
-<ion-content [fullscreen]="true">
+<ion-content class="ion-padding-top ion-text-center">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">appointments</ion-title>
