--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -1,13 +1,37 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>main</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-menu contentId="menu-content" menuId="menu-content" side="start">
+<app-header title="Menú" subtitle="Usuario"></app-header>
+  <ion-content class="ion-text-center">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">main</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<ion-avatar>
+  <img *ngIf="user()?.image" [src]="user()?.image" />
+  <ion-icon *ngIf="!user()?.image" class="empty-icon" name="person-circle-outline"></ion-icon>
+</ion-avatar>
+
+    <h4>{{user()?.name}}</h4>
+
+<ion-menu-toggle autoHide="false" *ngFor="let p of pages">
+  <ion-item [ngClass]="{'active': currentPath === p.url}" [routerLink]="p.url" routerDirection="root" detail>
+    <ion-icon slot="start" [name]="p.icon"></ion-icon>
+    <ion-label>{{p.title}}</ion-label>
+  </ion-item>
+
+</ion-menu-toggle>
+
+
+  </ion-content>
+
+<ion-footer class="ion-no-border safe-p-bottom">
+  <ion-menu-toggle autoHide="false">
+    <ion-item (click)="signOut()" lines="none">
+      <ion-icon slot="start" name="log-out-outline"></ion-icon>
+      <ion-label>Cerrar sesión</ion-label>
+    </ion-item>
+  
+  </ion-menu-toggle>
+</ion-footer>
+
+
+
+</ion-menu>
+
+<ion-router-outlet id="menu-content" main></ion-router-outlet>
