--- a/src/app/pages/tabs/tab2/tab2.page.html
+++ b/src/app/pages/tabs/tab2/tab2.page.html
@@ -1,20 +1,17 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>mainDoctor</ion-title>
+    <ion-title>
+      Tab 2
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">mainDoctor</ion-title>
+      <ion-title size="large">Tab 2</ion-title>
     </ion-toolbar>
   </ion-header>
 
-
-  <h1>HOLA DOCTOR</h1>
-
-  <ion-button (click)="signOut()">
-    Cerrar Sesión 
-  </ion-button>
+  <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
