--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -13,7 +13,7 @@
             <!-- <ion-icon slot="end" name="bandage-outline"></ion-icon> -->
         </ion-button>
 
-        <p class="P1">¿No tienes cuenta?<a routerLink="#" id="registro"> Regístrate</a></p>
+        <p class="P1">¿No tienes cuenta?<a routerLink="/sign-up" id="registro"> Regístrate</a></p>
 
         <ion-button class="ion-margin-top" expand="block"  routerLink="/auth/sign-up-doctors" mode="ios" fill="solid">
             Iniciar Sesion Como Medico
