--- a/src/app/pages/main/search/search.page.html
+++ b/src/app/pages/main/search/search.page.html
@@ -1,13 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Search</ion-title>
+    <ion-title>Búsqueda</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-searchbar (ionInput)="filterDocuments($event)" placeholder="Buscar por nombre o especialidad"></ion-searchbar>
+   
+  <!-- Mensaje para cuando no hay coincidencias -->
+   <div *ngIf="documents.length === 0" class="no-results">
+    <p>No se encontraron coincidencias.</p>
+    <p>Verifique su búsqueda.</p>
+    <p>Busque por Nombre, Dirección o Especialidad.</p>
+  </div>
+
   <ion-list>
     <ion-card *ngFor="let doc of documents" (click)="goToDetail(doc)">
+      <ion-img [src]="doc.Foto" alt="Foto del doctor"></ion-img>
       <ion-card-header>
         <ion-card-title>{{ doc.Name }}</ion-card-title> <!-- Reemplaza 'name' con el campo que desees mostrar -->
       </ion-card-header>
