--- a/src/app/pages/doctor-detail/doctor-detail.page.html
+++ b/src/app/pages/doctor-detail/doctor-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="goBack()">Regresar</ion-button> <!-- Aquí llamamos a la función goBack -->
+      <ion-button (click)="goBack()">Regresar</ion-button>
     </ion-buttons>
     <ion-title>Detalles del Doctor</ion-title>
   </ion-toolbar>
@@ -9,22 +9,21 @@
 
 <ion-content>
   <ion-card>
-    <ion-img [src]="doctor.Foto" alt="Foto del doctor"></ion-img>
+    <ion-img [src]="doctor.Foto" alt="Foto del doctor" class="doctor-img"></ion-img>
     <ion-card-header>
       <ion-card-title>{{ doctor.Name }}</ion-card-title>
-      <p>Especialidades: {{ doctor.Especialidades.join(', ') }}</p>
     </ion-card-header>
     <ion-card-content>
+      <p><strong>Especialidades:</strong> {{ doctor.Especialidades.join(', ') }}</p>
       <p><strong>Dirección:</strong> {{ doctor.Direccion }}</p>
       <p><strong>Teléfono:</strong> {{ doctor.Telefono }}</p>
-      
-      <!-- Puedes agregar más información según los datos disponibles -->
     </ion-card-content>
   </ion-card>
 
   <div class="button-container">
-    <ion-button expand="block" color="primary" size="large" (click)="scheduleAppointment()">
-      Agendar Cita
+    <ion-button expand="block" color="primary" size="large" (click)="scheduleAppointment()" class="fancy-button">
+      <ion-icon name="calendar" slot="start"></ion-icon>
+      <span>Agendar Cita</span>
     </ion-button>
   </div>
 </ion-content>
