--- a/src/app/pages/main/search/search.page.scss
+++ b/src/app/pages/main/search/search.page.scss
@@ -1,7 +1,25 @@
 .no-results {
-    text-align: center;
-    padding: 20px;
-    color: #666;
-    font-size: 16px;
-  }
-  
+  text-align: center;
+  margin-top: 20px;
+}
+
+ion-card {
+  margin: 10px 0;
+}
+
+ion-card-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+ul {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+ion-img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  /* Asegura que la imagen ocupe el espacio sin deformarse */
+}
